reduced observing section

--- a/index.html
+++ b/index.html
@@ -110,12 +110,13 @@
 											<a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1511.04647" class="image"><img src="images/20150609_PDF_residual_LCDM.jpg" alt="" /></a>
 											<div class="inner">
                                                 <h4>Incorporating Astrophysical Systematics into a Generalized Likelihood for Cosmology with Type Ia Supernovae</h4>
-												<p>This plot, referred to by the authors as a "Butterfly" plot, illustrates a toy model looking at the distributions of supernovae.
+												<p>The Astrophysical Journal, Volume 825, Issue 1, article id. 35, 13 pp. (2016) <br /> <br />
+                                                
+                                                This plot, referred to by the authors as a "Butterfly" plot, illustrates a toy model looking at the distributions of supernovae.
                                                 We built a framework to model systematics with a non-Gaussian likelihood that can remove bias with minimal precision losses.
                                                 To the left, we showed what the (toy model) distributions of supernovae that were modeled looked like at different redshifts.
-                                                <br />
-                                                This paper is published in the
-                                                The Astrophysical Journal, Volume 825, Issue 1, article id. 35, 13 pp. (2016)</p>
+
+                                                </p>
 											</div>
 										</article>
 										<article>
@@ -123,11 +124,11 @@
 											<div class="inner">
 												<h4>Observations</h4>
 												<p> <!--Majority of my observations have been carried out on Kitt Peak in Arizona.<br />-->
-                                                SweetSpot survey was conducted on the <a href="http://www.wiyn.org/"> WIYN 3.5 m</a> using the <a href="http://www.noao.edu/kpno/manuals/whirc/WHIRC.html">WIYN High-resolution InfraRed Camera (WHIRC)</a>. <br />
-                                                SweetSpot also utilized <a href="http://www.astro.wisc.edu/~mab/research/hexpak_gradpak/">HexPak</a>, a hexagonal shaped integral field unit
-                                                mounted on the WIYN bench spectrograph. <br />
-                                                For <a href="https://arxiv.org/abs/1408.5970"> SDSS III Reverberation Mapping project</a>, I operated the Bok 2.3 m run by the Steward Observatory on Kitt Peak.<br />
-                                                I have also worked on the <a href="http://obs.carnegiescience.edu/MagellanMagellan"> Magellan Telescopes</a> using Low Dispersion Survey Spectrograph 3 (LDSS-3): Slit spectrograph in Optical and Folded-port InfraRed Echellette (FIRE): Echelle mode NIR spectrograph.
+                                                <a href="http://www.wiyn.org/"> WIYN 3.5 m</a> on Kitt Peak using <a href="http://www.noao.edu/kpno/manuals/whirc/WHIRC.html">WIYN High-resolution InfraRed Camera (WHIRC)</a> for SweetSpot. <br />
+                                                <a href="http://www.wiyn.org/"> WIYN 3.5 m</a> on Kitt Peak using <a href="http://www.astro.wisc.edu/~mab/research/hexpak_gradpak/">HexPak</a>, a hexagonal shaped integral field unit
+                                                mounted on the WIYN bench spectrograph for SweetSpot. <br />
+                                                Bok 2.3 m on Kitt Peak for <a href="https://arxiv.org/abs/1408.5970"> SDSS III Reverberation Mapping project</a>.<br />
+                                                <a href="http://obs.carnegiescience.edu/MagellanMagellan"> Magellan Telescopes</a> using Low Dispersion Survey Spectrograph 3 (LDSS-3): Slit spectrograph in Optical and Folded-port InfraRed Echellette (FIRE): Echelle mode NIR spectrograph.
                                                 </p>
 											</div>
 										</article>
@@ -162,7 +163,8 @@
                                     <br /><br />
                                     Collaborations and Surveys:<br />
                                     <li class="fa-star"> <a href="https://arxiv.org/abs/1310.2259">SweetSpot Survey</a> </li>
-                                    <li class="fa-star"> <a href="https://www.lsst.org/">Large Synoptic Survey Telescope</a> <a href="http://www.lsst-desc.org/"> Dark Energy Science Collaboration</a>  </li>
+                                    <li class="fa-star"> <a href="https://www.lsst.org/">Large Synoptic Survey Telescope</a>
+                                        <a href="http://www.lsst-desc.org/"> Dark Energy Science Collaboration</a>  </li>
                                     <li class="fa-star"> <a href="https://www.sdss3.org/future/">Sloan Digital Sky Survey 4</a> and <a href="http://www.sdss.org/surveys/manga/">MaNGA</a> </li>
                                     <li class="fa-star"> <a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1511.01495"> All-weather MUse Supernova Integral field Nearby Galaxies (AMUSING) survey </a> </li>
                                     
