more spaces in observing

--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
 											<div class="inner">
 												<h4>Observations</h4>
 												<p> <!--Majority of my observations have been carried out on Kitt Peak in Arizona.<br />-->
-                                                <a href="http://www.wiyn.org/"> WIYN 3.5 m</a> on Kitt Peak using <a href="http://www.noao.edu/kpno/manuals/whirc/WHIRC.html">WIYN High-resolution InfraRed Camera (WHIRC)</a> for SweetSpot. <br />
+                                                <a href="http://www.wiyn.org/"> WIYN 3.5 m</a> on Kitt Peak using <a href="http://www.noao.edu/kpno/manuals/whirc/WHIRC.html">WIYN High-resolution InfraRed Camera (WHIRC)</a> for SweetSpot. <br /><br />
                                                 <a href="http://www.wiyn.org/"> WIYN 3.5 m</a> on Kitt Peak using <a href="http://www.astro.wisc.edu/~mab/research/hexpak_gradpak/">HexPak</a>, a hexagonal shaped integral field unit
-                                                mounted on the WIYN bench spectrograph for SweetSpot. <br />
-                                                Bok 2.3 m on Kitt Peak for <a href="https://arxiv.org/abs/1408.5970"> SDSS III Reverberation Mapping project</a>.<br />
+                                                mounted on the WIYN bench spectrograph for SweetSpot. <br /><br />
+                                                Bok 2.3 m on Kitt Peak for <a href="https://arxiv.org/abs/1408.5970"> SDSS III Reverberation Mapping project</a>.<br /><br />
                                                 <a href="http://obs.carnegiescience.edu/MagellanMagellan"> Magellan Telescopes</a> using Low Dispersion Survey Spectrograph 3 (LDSS-3): Slit spectrograph in Optical and Folded-port InfraRed Echellette (FIRE): Echelle mode NIR spectrograph.
                                                 </p>
 											</div>
