break in lsst desc

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                     <br /><br />
                                     Collaborations and Surveys:<br />
                                     <li class="fa-star"> <a href="https://arxiv.org/abs/1310.2259">SweetSpot Survey</a> </li>
-                                    <li class="fa-star"> <a href="https://www.lsst.org/">Large Synoptic Survey Telescope</a>
+                                    <li class="fa-star"> <a href="https://www.lsst.org/">Large Synoptic Survey Telescope</a> <br />
                                         <a href="http://www.lsst-desc.org/"> Dark Energy Science Collaboration</a>  </li>
                                     <li class="fa-star"> <a href="https://www.sdss3.org/future/">Sloan Digital Sky Survey 4</a> and <a href="http://www.sdss.org/surveys/manga/">MaNGA</a> </li>
                                     <li class="fa-star"> <a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1511.01495"> All-weather MUse Supernova Integral field Nearby Galaxies (AMUSING) survey </a> </li>
