changed location of talk

--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
 											</div>
 										</article>
                                         <article>
-                                            <a href="http://sn2016.cl/program" class="image"><img src="images/IMG_3471_SAT-13TH_K-PONDER_TALK.jpg" alt="" /></a>
+                                            <a href="http://sn2016.cl" class="image"><img src="images/IMG_3471_SAT-13TH_K-PONDER_TALK.jpg" alt="" /></a>
                                             <div class="inner">
                                                 <h4>Supernova Through the Ages: Understanding the Past to Prepare for the Future</h4>
-                                                <p>In August 2016 on Easter Island, I gave a contributed talk at a supernova conference celebrating the careers of Mark Phillips and Nicholas Suntzeff. A copy of my talk can be found at the link associated with the picture. (Possible video link to follow.)</p>
+                                                <p>In August 2016 on Easter Island, I gave a contributed talk at a supernova conference celebrating the careers of Mark Phillips and Nicholas Suntzeff. A copy of my talk can be found at <a href="http://sn2016.cl/documents/0813-Saturday/72-Kara_Ponder.pdf"> here</a>.</p>
                                             </div>
                                         </article>
                                     </div>
