--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                 <ul class="feature-icons">
                                      <li class="fa-file-pdf-o"> <a href="Ponder_Kara_CV.pdf">CV</a> </li>
                                      <li class="fa-file">List of <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1">arXiv</a> papers.</li>
-                                    <li class="fa-university"> <a href="http://inspirehep.net/author/profile/Kara.A.Ponder.1PhD">inSPIRE</a> </li>
+                                    <li class="fa-university"> <a href="http://inspirehep.net/author/profile/Kara.A.Ponder.1PhD">inSPIRE HEP</a> </li>
                                     <li class="fa-bar-chart"> <a href="https://www.researchgate.net/profile/Kara_Ponder">Research Gate</a></li>
                                     <li class="fa-graduation-cap"> <a href="https://scholar.google.com/citations?user=D-PUvKoAAAAJ&hl=en">Google Scholar</a> </li>
                                     <li class="icon fa-linkedin"> <a href="https://www.linkedin.com/in/kara-ponder-2635749b" >LinkedIn</a></li>
