Added initial to match papers and applications

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Kara Ponder</title>
+		<title>Kara A. Ponder</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,7 +19,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/ponder.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Kara Ponder</a></h1>
+					<h1 id="logo"><a href="#">Kara A. Ponder</a></h1>
 					<p>PhD Candidate<br />
                     Department of Physics and Astronomy <br />
 					Univerisity of Pittsburgh</p>
@@ -55,7 +55,7 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h2>Kara Ponder</h2>
+										<h2>Kara A. Ponder</h2>
 										<!-- <p>WEBSITE UNDER <br />
 										 CONSTRUCTION</p> -->
 									</header>
