--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                             <a href="http://sn2016.cl/program" class="image"><img src="images/IMG_3471_SAT-13TH_K-PONDER_TALK.jpg" alt="" /></a>
                                             <div class="inner">
                                                 <h4> <a href="http://sn2016.cl" > Supernova Through the Ages: Understanding the Past to Prepare for the Future</a> </h4>
-                                                <p>In August 2016 on Easter Island, I gave a contributed talk at a supernova conference celebrating the careers of Mark Phillips and Nicholas Suntzeff. A copy of my talk can be found at <a href="http://sn2016.cl/documents/0813-Saturday/72-Kara_Ponder.pdf"> here</a>.</p>
+                                                <p>In August 2016 on Easter Island, I gave a contributed plenary talk at a supernova conference celebrating the careers of Mark Phillips and Nicholas Suntzeff. A copy of my talk can be found <a href="http://sn2016.cl/documents/0813-Saturday/72-Kara_Ponder.pdf"> here</a>.</p>
                                             </div>
                                         </article>
                                     </div>
