changed SweetSpot website to actual website

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                     <li class="fa-asterisk"> <a href="http://www.physicsandastronomy.pitt.edu/pittpacc">Pittsburgh Particle, Astrophysics, and Cosmology Center (Pitt PACC)</a> </li>
                                     <br /><br />
                                     Collaborations and Surveys:<br />
-                                    <li class="fa-star"> <a href="https://arxiv.org/abs/1310.2259">SweetSpot Survey</a> </li>
+                                    <li class="fa-star"> <a href="https://mwvgroup.github.io/SweetSpot/">SweetSpot Survey</a> </li>
                                     <li class="fa-hourglass-o"> <a href="https://www.lsst.org/">Large Synoptic Survey Telescope</a> <br />
                                         <a href="http://www.lsst-desc.org/"> Dark Energy Science Collaboration</a>  </li>
                                     <li class="fa-cogs"> <a href="https://www.sdss3.org/future/">Sloan Digital Sky Survey 4</a> and <a href="http://www.sdss.org/surveys/manga/">MaNGA</a> </li>
