--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                                 mounted on the WIYN bench spectrograph for SweetSpot. <br /><br />
                                                 Bok 2.3 m on Kitt Peak for <a href="https://arxiv.org/abs/1408.5970"> SDSS III Reverberation Mapping project</a>.<br /><br />
                                                 <a href="http://obs.carnegiescience.edu/MagellanMagellan"> Magellan Telescopes</a> using Low Dispersion Survey Spectrograph 3 (LDSS-3): Slit spectrograph in Optical and Folded-port InfraRed Echellette (FIRE): Echelle mode NIR spectrograph.
-                                                    From my observation using LDSS-3, I helped observed the <a href="http://www.astronomerstelegram.org/?read=9700"> highest redshifted SLSNe</a> spectroscopically confirmed.
+                                                    With LDSS-3, I helped observe the <a href="http://www.astronomerstelegram.org/?read=9700"> highest redshifted SLSNe</a> spectroscopically confirmed.
                                                 </p>
 											</div>
 										</article>
