--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 										<!--<li class="fa-file">List of <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1">arXiv</a> papers.</li>-->
                                         <li class="fa-sort-amount-desc">Bayesian/Hierarchical Bayesian analyses</li>
                                         <li class="fa-superscript">Dark Energy Parameter estimation </li>
-                                        <li class="fa-star">NIR Photometric Light curves of SNeIa for the <a href="https://arxiv.org/abs/1310.2259">SweetSpot Survey</a> </li>
+                                        <li class="fa-star">NIR Photometric Light curves of SNeIa for the <a href="https://mwvgroup.github.io/SweetSpot/">SweetSpot Survey</a> </li>
                                         <li class="fa-area-chart">Optical Spectroscopy of SN host galaxies</li>
                                         
 									</ul>
