Added Allegheny Public lecture

--- a/index.html
+++ b/index.html
@@ -99,7 +99,28 @@
 									<h3>Highlights</h3>
 									<!-- <p> summary of accomplishments.</p> -->
 									<div class="features">
-										<article>
+                                        <article>
+                                            <a href="http://www.pitt.edu/~aobsvtry/" class="image"><img src="images/Allegheny_Public.jpg" alt="" /></a>
+                                            <div class="inner">
+                                                <h4>Allegheny Observatory Public Lectures</h4>
+                                                <p>"Exploring Dark Energy with the Large Synoptic Survey Telescope" <br />
+                                                January 20, 2017</p>
+                                            </div>
+                                        </article>
+                                        <article>
+                                            <a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1511.04647" class="image"><img src="images/20150609_PDF_residual_LCDM.jpg" alt="" /></a>
+                                            <div class="inner">
+                                                <h4>Incorporating Astrophysical Systematics into a Generalized Likelihood for Cosmology with Type Ia Supernovae</h4>
+                                                <p>The Astrophysical Journal, Volume 825, Issue 1, article id. 35, 13 pp. (2016) <br /> <br />
+                                                
+                                                This plot, referred to by the authors as a "Butterfly" plot, illustrates a toy model looking at the distributions of supernovae.
+                                                We built a framework to model systematics with a non-Gaussian likelihood that can remove bias with minimal precision losses.
+                                                <!--To the left, we showed what the (toy model) distributions of supernovae that were modeled looked like at different redshifts.-->
+                                                
+                                                </p>
+                                            </div>
+                                        </article>
+                                        <article>
 											<a href="http://www.lsst-desc.org/" class="image"><img src="images/LSST-DESC-logo.png" alt="" /></a>
 											<div class="inner">
 												<h4>Member of the Large Synoptic Survey Telescope (LSST) Dark Energy Science Collaboration (DESC)</h4>
