changed links for AO, tried to crop picture

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 									<!-- <p> summary of accomplishments.</p> -->
 									<div class="features">
                                         <article>
-                                            <a href="http://www.pitt.edu/~aobsvtry/" class="image"><img src="images/Allegheny_Public.jpg" alt="" /></a>
+                                            <a href="" class="image"><img src="images/Allegheny_Public.jpg" alt="" /></a>
                                             <div class="inner">
-                                                <h4>Allegheny Observatory Public Lectures</h4>
+                                                <h4><a href="http://www.pitt.edu/~aobsvtry/">Allegheny Observatory</a> Public Lectures</h4>
                                                 <p>"Exploring Dark Energy with the Large Synoptic Survey Telescope" <br />
                                                 January 20, 2017</p>
                                             </div>
