--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 										<!-- <p>WEBSITE UNDER <br />
 										 CONSTRUCTION</p> -->
 									</header>
-									<p> I am currently a 5th year graduate student studying dark energy through supernova cosmology. <br />
+									<p> I am currently a 5th year graduate student studying dark energy through supernova cosmology and graduating in August 2017. <br />
                                     
                                     My research goals are understanding host galaxy correlations with supernovae for cosmology.
                                     I have explored ways to improve parameter estimation with the likelihood function motivated by this correlation.
@@ -68,6 +68,8 @@
                                     spectra of host galaxies and am leading that data reduction as well. I will be analyzing the resulting correlations
                                     and incorporating them into likelihood functions for cosmology to be used for large scale surveys such as the Large Synoptic Survey Telescope(LSST)
                                     and the Wide Field Infrared Survey Telescope  (WFIRST). <br />
+                                     <br />
+                                     In Fall 2017, I will be moving to UC Berkeley as a Berkeley Center for Cosmological Physics (BCCP) Computational Data Science Fellow to work with Saul Perlmutter.
                                     
                                     <!-- Here is my <a href="Ponder_Kara_CV.pdf">CV</a>.-->
                                     </p>
