--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 				<header>
 					<span class="image avatar"><img src="images/ponder.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Kara A. Ponder</a></h1>
-					<p>PhD Candidate<br />
-                    Department of Physics and Astronomy <br />
-					Univerisity of Pittsburgh</p>
+					<p>Postdoctoral Researcher<br />
+                    BCCP CDS Fellow <br />
+					UC Berkeley</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -59,7 +59,8 @@
 										<!-- <p>WEBSITE UNDER <br />
 										 CONSTRUCTION</p> -->
 									</header>
-									<p> I am currently a 5th year graduate student studying dark energy through supernova cosmology and graduating in August 2017. <br />
+									<p> I am currently a postdoctoral researcher working at the Berkeley Center for Cosmological Physics as a Computational Data Science Fellow.
+                                     I work with Saul Perlmutter's group at UC Berkeley and LBNL. <br />
                                     
                                     My research goals are understanding host galaxy correlations with supernovae for cosmology.
                                     I have explored ways to improve parameter estimation with the likelihood function motivated by this correlation.
@@ -69,7 +70,7 @@
                                     and incorporating them into likelihood functions for cosmology to be used for large scale surveys such as the Large Synoptic Survey Telescope(LSST)
                                     and the Wide Field Infrared Survey Telescope  (WFIRST). <br />
                                      <br />
-                                     In Fall 2017, I will be moving to UC Berkeley as a Berkeley Center for Cosmological Physics (BCCP) Computational Data Science Fellow to work with Saul Perlmutter.
+                                     In August 2017, I graduated from the University of Pittsburgh with a PhD in Physics.
                                     
                                     <!-- Here is my <a href="Ponder_Kara_CV.pdf">CV</a>.-->
                                     </p>
@@ -163,6 +164,7 @@
                                 <ul class="feature-icons">
                                      <li class="fa-file-pdf-o"> <a href="Ponder_Kara_CV.pdf">CV</a> </li>
                                      <li class="fa-file">List of <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1">arXiv</a> papers.</li>
+                                     <li class="fa-file"> <a href="https://ui.adsabs.harvard.edu/#search/fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq_database=(database%3A%22astronomy%22)&q=%20author%3A%22Ponder%2C%20K%22&sort=date%20desc%2C%20bibcode%20desc">ADS</a> </li>
                                     <li class="fa-university"> <a href="http://inspirehep.net/author/profile/Kara.A.Ponder.1">inSPIRE HEP</a> </li>
                                     <li class="fa-bar-chart"> <a href="https://www.researchgate.net/profile/Kara_Ponder">Research Gate</a></li>
                                     <li class="fa-graduation-cap"> <a href="https://scholar.google.com/citations?user=D-PUvKoAAAAJ&hl=en">Google Scholar</a> </li>
