Update html file with affiliations and collaborations

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
 						<!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
 						<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>-->
-                        <li><a href="mailto:kap146@pitt.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
+                        <li><a href="mailto:kponder@berkeley.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						<li><a href="https://github.com/kponder" class="icon fa-github"><span class="label">Github</span></a></li>
                         <li><a href="https://www.linkedin.com/in/kara-ponder-2635749b" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
@@ -83,6 +83,7 @@
 									<h3>Experience</h3>
 									<!-- <p>any experience summary text</p> -->
 									<ul class="feature-icons">
+                                        <li class="fa-area-chart">Berkeley Center for Cosmological Sciences Computational Data Scientist</li>
                                         <li class="fa-graduation-cap"> PhD and Master of Science in Physics:  University of Pittsburgh</li>
                                         <li class="fa-graduation-cap"> Bachelor of Science in Physics and Astronomy: University of Georgia</li>
                                         <li class="fa-code"> Coding: Python, C++, PyRAF/IRAF, emcee, AstroPy </li>
@@ -172,14 +173,20 @@
                                     <li  class="icon fa-github"><a href="https://github.com/kponder" >GitHub</a></li>
                                     <br /><br />
                                     Affiliations:<br />
+                                    <li class="fa-university"> <a href="">University of California, Berkeley</a> </li>
+                                    <li class="fa-asterisk"> <a href="bccp.berkeley.edu">Berkeley Center for Cosmological Physics (BCCP)</a> </li>
+                                    <li class="fa-asterisk"> <a href="">Lawrence Berkeley National Laboratory </a> </li>
+                                    <br /><br />
+                                    Previously:<br />
                                     <li class="fa-university"> <a href="http://www.physicsandastronomy.pitt.edu/">University of Pittsburgh</a> </li>
                                     <li class="fa-asterisk"> <a href="http://www.physicsandastronomy.pitt.edu/pittpacc">Pittsburgh Particle, Astrophysics, and Cosmology Center (Pitt PACC)</a> </li>
                                     <br /><br />
                                     Collaborations and Surveys:<br />
+                                    <li class="fa-area-chart"> <a href="">SNFactory</a> </li>
                                     <li class="fa-star"> <a href="https://mwvgroup.github.io/SweetSpot/">SweetSpot Survey</a> </li>
                                     <li class="fa-hourglass-o"> <a href="https://www.lsst.org/">Large Synoptic Survey Telescope</a> <br />
                                         <a href="http://www.lsst-desc.org/"> Dark Energy Science Collaboration</a>  </li>
-                                    <li class="fa-cogs"> <a href="https://www.sdss3.org/future/">Sloan Digital Sky Survey 4</a> and <a href="http://www.sdss.org/surveys/manga/">MaNGA</a> </li>
+                                    <li class="fa-cogs"> <a href="https://www.sdss3.org/future/">Sloan Digital Sky Survey 4</a> <!--and <a href="http://www.sdss.org/surveys/manga/">MaNGA</a>  --></li>
                                     <li class="fa-smile-o"> <a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1511.01495"> All-weather MUse Supernova Integral field Nearby Galaxies (AMUSING) survey </a> </li>
                                     <br /><br /><br /><br />
                                     To email me, click the envelope on the side bar!
