Small updates, added picture for thesis

--- a/index.html
+++ b/index.html
@@ -104,6 +104,15 @@
 									<!-- <p> summary of accomplishments.</p> -->
 									<div class="features">
                                         <article>
+                                            <a href="" class="image"><img src="images/SN2014dm.jpg" alt="" /></a>
+                                            <div class="inner">
+                                                <h4>Doctoral Thesis Defended July 19th, 2017 </h4>
+                                                <p><a href="http://d-scholarship.pitt.edu/32578/">"Fitting and Phenomenology in Type Ia Supernova Cosmology: Generalized Likelihood Analyses for Multiple Evolving Populations and Observations of Near-Infrared Lightcurves including Host Galaxy Properties. " </a><br />
+                                                    Galaxy images to the left taken from PANSTARRS.
+                                                </p>
+                                            </div>
+                                        </article>
+                                        <article>
                                             <a href="" class="image"><img src="images/Allegheny_Public.jpg" alt="" /></a>
                                             <div class="inner">
                                                 <h4><a href="http://www.pitt.edu/~aobsvtry/">Allegheny Observatory</a> Public Lectures</h4>
