--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="stylesheet" href="/Users/karaponder/Documents/Website/kponder.github.io/academicons-1.8.0/css/academicons.css"/>
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
@@ -173,11 +174,11 @@
                                 <!-- <p>links</p> -->
                                 <ul class="feature-icons">
                                      <li class="fa-file-pdf-o"> <a href="Ponder_Kara_CV.pdf">CV</a> </li>
-                                     <li class="fa-file">List of <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1">arXiv</a> papers.</li>
-                                     <li class="fa-file"> <a href="https://ui.adsabs.harvard.edu/#search/fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq_database=(database%3A%22astronomy%22)&q=%20author%3A%22Ponder%2C%20K%22&sort=date%20desc%2C%20bibcode%20desc">ADS</a> </li>
-                                    <li class="fa-university"> <a href="http://inspirehep.net/author/profile/Kara.A.Ponder.1">inSPIRE HEP</a> </li>
-                                    <li class="fa-bar-chart"> <a href="https://www.researchgate.net/profile/Kara_Ponder">Research Gate</a></li>
-                                    <li class="fa-graduation-cap"> <a href="https://scholar.google.com/citations?user=D-PUvKoAAAAJ&hl=en">Google Scholar</a> </li>
+                                     <li class="ai ai-arxiv">List of <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1">arXiv</a> papers.</li>
+                                     <li class="ai-ads"> <a href="https://ui.adsabs.harvard.edu/#search/fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq_database=(database%3A%22astronomy%22)&q=%20author%3A%22Ponder%2C%20K%22&sort=date%20desc%2C%20bibcode%20desc">ADS</a> </li>
+                                    <li class="ai ai-inspire"> <a href="http://inspirehep.net/author/profile/Kara.A.Ponder.1">inSPIRE HEP</a> </li>
+                                    <li class="ai ai-researchgate"> <a href="https://www.researchgate.net/profile/Kara_Ponder">Research Gate</a></li>
+                                    <li class="ai ai-google-scholar"> <a href="https://scholar.google.com/citations?user=D-PUvKoAAAAJ&hl=en">Google Scholar</a> </li>
                                     <li class="icon fa-linkedin"> <a href="https://www.linkedin.com/in/kara-ponder-2635749b" >LinkedIn</a></li>
                                     <li  class="icon fa-github"><a href="https://github.com/kponder" >GitHub</a></li>
                                     <br /><br />
