updated academic icon location, added SCP

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-        <link rel="stylesheet" href="/Users/karaponder/Documents/Website/kponder.github.io/academicons-1.8.0/css/academicons.css"/>
+        <link rel="stylesheet" href="./academicons-1.8.0/css/academicons.css"/>
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
@@ -193,6 +193,7 @@
                                     <br /><br />
                                     Collaborations and Surveys:<br />
                                     <li class="fa-area-chart"> <a href="">SNFactory</a> </li>
+                                    <li class="fa-area-chart"> <a href="">Supernova Cosmology Project</a> </li>
                                     <li class="fa-star"> <a href="https://mwvgroup.github.io/SweetSpot/">SweetSpot Survey</a> </li>
                                     <li class="fa-hourglass-o"> <a href="https://www.lsst.org/">Large Synoptic Survey Telescope</a> <br />
                                         <a href="http://www.lsst-desc.org/"> Dark Energy Science Collaboration</a>  </li>
