rearrange CV and links

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+
+
 <html>
 	<head>
 		<title>Kara A. Ponder</title>
@@ -173,14 +175,25 @@
                                 <h3>CV and Links</h3>
                                 <!-- <p>links</p> -->
                                 <ul class="feature-icons">
-                                     <li class="fa-file-pdf-o"> <a href="Ponder_Kara_CV.pdf">CV</a> </li>
-                                     <li class="ai ai-arxiv">List of <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1">arXiv</a> papers.</li>
-                                     <li class="ai-ads"> <a href="https://ui.adsabs.harvard.edu/#search/fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq_database=(database%3A%22astronomy%22)&q=%20author%3A%22Ponder%2C%20K%22&sort=date%20desc%2C%20bibcode%20desc">ADS</a> </li>
-                                    <li class="ai ai-inspire"> <a href="http://inspirehep.net/author/profile/Kara.A.Ponder.1">inSPIRE HEP</a> </li>
-                                    <li class="ai ai-researchgate"> <a href="https://www.researchgate.net/profile/Kara_Ponder">Research Gate</a></li>
-                                    <li class="ai ai-google-scholar"> <a href="https://scholar.google.com/citations?user=D-PUvKoAAAAJ&hl=en">Google Scholar</a> </li>
-                                    <li class="icon fa-linkedin"> <a href="https://www.linkedin.com/in/kara-ponder-2635749b" >LinkedIn</a></li>
-                                    <li  class="icon fa-github"><a href="https://github.com/kponder" >GitHub</a></li>
+                                     <!--  <li class="fa-file-pdf-o"> <a href="Ponder_Kara_CV.pdf">CV</a> </li> -->
+                                     <br /><br />
+                                     <div style="text-align: center">
+                                    <a href="Ponder_Kara_CV.pdf">CV</a>
+                                    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                                    <a href="https://www.linkedin.com/in/kara-ponder-2635749b" ><i class="icon fa-linkedin fa-3x"></i></a>
+                                    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                                    <a href="https://github.com/kponder" ><i  class="icon fa-github fa-3x"></i></a>
+                                    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                                    <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1"><i class="ai ai-arxiv ai-3x"> </i></a>
+                                    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                                    <a href="https://ui.adsabs.harvard.edu/#search/fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq_database=(database%3A%22astronomy%22)&q=%20author%3A%22Ponder%2C%20K%22&sort=date%20desc%2C%20bibcode%20desc"><i class="ai ai-ads ai-3x"></i></a>
+                                    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                                    <a href="http://inspirehep.net/author/profile/Kara.A.Ponder.1"><i class="ai ai-inspire ai-3x"> </i></a>
+                                    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                                    <a href="https://www.researchgate.net/profile/Kara_Ponder"><i class="ai ai-researchgate ai-3x"></i></a>
+                                    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                                    <a href="https://scholar.google.com/citations?user=D-PUvKoAAAAJ&hl=en"><i class="ai ai-google-scholar ai-3x"></i></a>
+                                    </div>
                                     <br /><br />
                                     Affiliations:<br />
                                     <li class="fa-university"> <a href="">University of California, Berkeley</a> </li>
