--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                         <li class="fa-graduation-cap"> PhD and Master of Science in Physics:  University of Pittsburgh</li>
                                         <li class="fa-graduation-cap"> Bachelor of Science in Physics and Astronomy: University of Georgia</li>
                                         <li class="fa-code"> Coding: Python, C++, PyRAF/IRAF, emcee, AstroPy </li>
-										<!--<li class="fa-file">List of <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1">arXiv</a> papers.</li>-->
+										<!--<li class="fa-file">List of <a href="https://arxiv.org/search/advanced?advanced=&terms-0-operator=AND&terms-0-term=%22Ponder%2C+K+A%22&terms-0-field=author&terms-1-operator=OR&terms-1-term=%22Ponder%2C+Kara%22&terms-1-field=author&terms-2-operator=OR&terms-2-term=%22Ponder%2C+Kara+A%22&terms-2-field=author&terms-3-operator=OR&terms-3-term=%22Ponder%2C+Kara+Ann%22&terms-3-field=author&classification-physics=y&classification-physics_archives=all&date-filter_by=all_dates&date-year=&date-from_date=&date-to_date=&size=50&order=">arXiv</a> papers.</li>-->
                                         <li class="fa-sort-amount-desc">Bayesian/Hierarchical Bayesian analyses</li>
                                         <li class="fa-superscript">Dark Energy Parameter estimation </li>
                                         <li class="fa-star">NIR Photometric Light curves of SNeIa for the <a href="https://mwvgroup.github.io/SweetSpot/">SweetSpot Survey</a> </li>
@@ -184,7 +184,7 @@
                                     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                                     <a href="https://github.com/kponder" ><i  class="icon fa-github fa-3x"></i></a>
                                     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-                                    <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1"><i class="ai ai-arxiv ai-3x"> </i></a>
+                                    <a href="https://arxiv.org/search/advanced?advanced=&terms-0-operator=AND&terms-0-term=%22Ponder%2C+K+A%22&terms-0-field=author&terms-1-operator=OR&terms-1-term=%22Ponder%2C+Kara%22&terms-1-field=author&terms-2-operator=OR&terms-2-term=%22Ponder%2C+Kara+A%22&terms-2-field=author&terms-3-operator=OR&terms-3-term=%22Ponder%2C+Kara+Ann%22&terms-3-field=author&classification-physics=y&classification-physics_archives=all&date-filter_by=all_dates&date-year=&date-from_date=&date-to_date=&size=50&order="><i class="ai ai-arxiv ai-3x"> </i></a>
                                     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                                     <a href="https://ui.adsabs.harvard.edu/#search/fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq_database=(database%3A%22astronomy%22)&q=%20author%3A%22Ponder%2C%20K%22&sort=date%20desc%2C%20bibcode%20desc"><i class="ai ai-ads ai-3x"></i></a>
                                     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
