--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/ponder.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/new_pic.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Kara A. Ponder</a></h1>
 					<p>Postdoctoral Researcher<br />
                     BCCP CDS Fellow <br />
@@ -70,7 +70,7 @@
                                     I am also exploring these correlations with NIR data obtained in the SweetSpot survey. I am currently
                                     leading the second and full data release of NIR photometric light curves for SweetSpot. I have taken IFU
                                     spectra of host galaxies and am leading that data reduction as well. I will be analyzing the resulting correlations
-                                    and incorporating them into likelihood functions for cosmology to be used for large scale surveys such as the Large Synoptic Survey Telescope(LSST)
+                                    and incorporating them into likelihood functions for cosmology to be used for large scale surveys such as the Large Synoptic Survey Telescope (LSST)
                                     and the Wide Field Infrared Survey Telescope  (WFIRST). <br />
                                      <br />
                                      In August 2017, I graduated from the University of Pittsburgh with a PhD in Physics.
