--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/new_pic.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/new_pic1.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Kara A. Ponder</a></h1>
 					<p>Postdoctoral Researcher<br />
                     BCCP CDS Fellow <br />
