Added some plasticc info

--- a/index.html
+++ b/index.html
@@ -106,6 +106,17 @@
 									<!-- <p> summary of accomplishments.</p> -->
 									<div class="features">
                                         <article>
+                                            <a href="" class="image"><img src="images/plasticc_valid.jpg" alt="" /></a>
+                                            <div class="inner">
+                                                <h4> Photometric LSST Astronomical Time-Series Classification Challenge (PLAsTiCC)</h4>
+                                                <p><a href="https://plasticc.org/"> PLAsTiCC </a> was a machine learning challenge hosted at
+                                                 <a href="https://www.kaggle.com/c/PLAsTiCC-2018"> Kaggle </a> with the aim to classify millions of
+                                                 lightcurves with a small, unrepresentative training set. I helped validate the simulations so that
+                                                 this competition could be leak free!
+                                                </p>
+                                            </div>
+                                        </article>
+                                        <article>
                                             <a href="" class="image"><img src="images/SN2014dm.jpg" alt="" /></a>
                                             <div class="inner">
                                                 <h4>Doctoral Thesis Defended July 19th, 2017 </h4>
@@ -209,7 +220,6 @@
                                     <li class="fa-star"> <a href="https://mwvgroup.github.io/SweetSpot/">SweetSpot Survey</a> </li>
                                     <li class="fa-hourglass-o"> <a href="https://www.lsst.org/">Large Synoptic Survey Telescope</a> <br />
                                         <a href="http://www.lsst-desc.org/"> Dark Energy Science Collaboration</a>  </li>
-                                    <li class="fa-cogs"> <a href="https://www.sdss3.org/future/">Sloan Digital Sky Survey 4</a> <!--and <a href="http://www.sdss.org/surveys/manga/">MaNGA</a>  --></li>
                                     <li class="fa-smile-o"> <a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1511.01495"> All-weather MUse Supernova Integral field Nearby Galaxies (AMUSING) survey </a> </li>
                                     <br /><br /><br /><br />
                                     To email me, click the envelope on the side bar!
