--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/new_pic1.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/20190920_kp_pic.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Kara A. Ponder</a></h1>
 					<p>Postdoctoral Researcher<br />
                     BCCP CDS Fellow <br />
@@ -43,7 +43,7 @@
 						<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>-->
                         <li><a href="mailto:kponder@berkeley.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						<li><a href="https://github.com/kponder" class="icon fa-github"><span class="label">Github</span></a></li>
-                        <li><a href="https://www.linkedin.com/in/kara-ponder-2635749b" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                        <li><a href="https://www.linkedin.com/in/karaponder1" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -217,12 +217,15 @@
                                     Collaborations and Surveys:<br />
                                     <li class="fa-area-chart"> <a href="">SNFactory</a> </li>
                                     <li class="fa-area-chart"> <a href="">Supernova Cosmology Project</a> </li>
+                                    <li class="fa-area-chart"> <a href="">Cosmostatistics Initiative (COIN)</a> </li>
                                     <li class="fa-star"> <a href="https://mwvgroup.github.io/SweetSpot/">SweetSpot Survey</a> </li>
                                     <li class="fa-hourglass-o"> <a href="https://www.lsst.org/">Large Synoptic Survey Telescope</a> <br />
                                         <a href="http://www.lsst-desc.org/"> Dark Energy Science Collaboration</a>  </li>
                                     <li class="fa-smile-o"> <a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1511.01495"> All-weather MUse Supernova Integral field Nearby Galaxies (AMUSING) survey </a> </li>
                                     <br /><br /><br /><br />
                                     To email me, click the envelope on the side bar!
+                                    <br /><br /><br /><br /><br /><br />
+                                    Image Credit: Brittany Hosea-Small. Courtesy of University of California Berkeley VSPA.
                                     
                                     
                                 </ul>
