--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                         <li class="fa-area-chart">Berkeley Center for Cosmological Sciences Computational Data Scientist</li>
                                         <li class="fa-graduation-cap"> PhD and Master of Science in Physics:  University of Pittsburgh</li>
                                         <li class="fa-graduation-cap"> Bachelor of Science in Physics and Astronomy: University of Georgia</li>
-                                        <li class="fa-code"> Coding: Python, C++, PyRAF/IRAF, emcee, AstroPy </li>
+                                        <li class="fa-code"> Coding: Python, C++, PyRAF/IRAF, emcee, AstroPy, Django </li>
 										<!--<li class="fa-file">List of <a href="https://arxiv.org/search/advanced?advanced=&terms-0-operator=AND&terms-0-term=%22Ponder%2C+K+A%22&terms-0-field=author&terms-1-operator=OR&terms-1-term=%22Ponder%2C+Kara%22&terms-1-field=author&terms-2-operator=OR&terms-2-term=%22Ponder%2C+Kara+A%22&terms-2-field=author&terms-3-operator=OR&terms-3-term=%22Ponder%2C+Kara+Ann%22&terms-3-field=author&classification-physics=y&classification-physics_archives=all&date-filter_by=all_dates&date-year=&date-from_date=&date-to_date=&size=50&order=">arXiv</a> papers.</li>-->
                                         <li class="fa-sort-amount-desc">Bayesian/Hierarchical Bayesian analyses</li>
                                         <li class="fa-superscript">Dark Energy Parameter estimation </li>
