--- a/index.html
+++ b/index.html
@@ -188,7 +188,9 @@
                                      <!--  <li class="fa-file-pdf-o"> <a href="Ponder_Kara_CV.pdf">CV</a> </li> -->
                                      <br /><br />
                                      <div style="text-align: center">
-                                    <a href="Ponder_Kara_CV.pdf">CV</a>
+                                    <a href="Ponder_Kara_Resume.pdf">Resume</a>
+                                    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                                    <a href="Ponder_Kara_CV.pdf">CV</a> <br /> <br />
                                     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                                     <a href="https://www.linkedin.com/in/kara-ponder-2635749b" ><i class="icon fa-linkedin fa-3x"></i></a>
                                     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
